--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -9,7 +10,9 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
-    "sass": "^1.46.0"
+    "mixitup": "^3.3.1",
+    "sass": "^1.46.0",
+    "slick-carousel": "^1.8.1"
   },
   "name": "ivan_grot",
   "version": "1.0.0",
